# surfify

./: .buildinfo  .coveragerc  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  README.rst  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  sg_execution_times.html
.github/: run_unitests.py
.github/worflows/: testing.yml
.github/workflows/: documentation.yml  linters.yml  pep8.yml  testing.yml
_downloads/0490f766be9bc4e67ac238cd66978361/: plot_project_texture.py
_downloads/199880e60dbba6d2f632f4ec796c03b2/: plot_match_icosahedron.ipynb
_downloads/32648f0ccf11c48108f31fafee8e2a92/: plot_unet_segmentation.ipynb
_downloads/4dd88b039dfb2b5b2e54ee8ac3d1e419/: plot_augmentation.ipynb
_downloads/629ddd5e5024bfa958f8063f3143c1f9/: plot_project_texture.ipynb
_downloads/81e67f85488b47e759e1b0af0a0cb961/: plot_augmentation.py
_downloads/e8604b96a6c203f997cefe0451e99204/: plot_spherical_neighbors.ipynb
_modules/: index.html
_modules/surfify/: utils.html
_modules/surfify/augmentation/: base.html  mixup.html  utils.html
_modules/surfify/datasets/: _generic.html  _samples_generator.html
_modules/surfify/losses/: vae.html
_modules/surfify/models/: base.html  unet.html  vae.html  vgg.html
_modules/surfify/nn/: functional.html  modules.html
_modules/surfify/plotting/: surface.html
_modules/surfify/utils/: coord.html  io.html  sampling.html
_sources/: index.rst.txt  sg_execution_times.rst.txt
_sources/auto_gallery/: index.rst.txt  plot_augmentation.rst.txt  plot_match_icosahedron.rst.txt  plot_project_texture.rst.txt  plot_spherical_neighbors.rst.txt  plot_unet_segmentation.rst.txt  sg_execution_times.rst.txt
auto_gallery/: index.html  plot_augmentation.html  plot_match_icosahedron.html  plot_project_texture.html  plot_spherical_neighbors.html  plot_unet_segmentation.html  sg_execution_times.html
doc/: requirements.txt
doc/source/: conf.py
examples/: README.txt  match_icosahedron.py  plot_augmentation.py  plot_match_icosahedron.py  plot_project_texture.py  plot_spherical_neighbors.py  plot_unet_segmentation.py  unet_segmentation.py
surfify/: __init__.py  info.py
surfify/augmentation/: __init__.py  augmentation.py  base.py  mixup.py  utils.py
surfify/datasets/: __init__.py  _generic.py  _samples_generator.py
surfify/losses/: __init__.py  vae.py
surfify/models/: __init__.py  base.py  unet.py  vae.py  vgg.py
surfify/nn/: __init__.py  functional.py  modules.py
surfify/plotting/: __init__.py  surface.py
surfify/tests/: test_augmentation.py  test_datasets.py  test_models_unet.py  test_models_vae.py  test_models_vgg.py  test_nn_modules.py  test_plotting_surface.py  test_utils_coord.py  test_utils_io.py  test_utils_logging.py  test_utils_sampling.py
surfify/utils/: __init__.py  coord.py  io.py  sampling.py
