[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "surfify"
readme = "README.rst"
requires-python = ">=3.9"
authors = [
    {name = "surfify developers", email = "antoine.grigis@cea.fr"},
]
license = {text = "CeCILL-B"}
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "scipy",
    "networkx",
    "scikit-learn",
    "nilearn",
    "joblib",
    "matplotlib",
    "torch",
    "torchvision",
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/neurospin-deepinsight/surfify"
Tracker = "https://github.com/neurospin-deepinsight/surfify/issues"

[tool.setuptools]
platforms = ["Linux", "OSX"]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "surfify.info.__version__"}

[tool.setuptools.packages.find]
exclude = ["doc"]
namespaces = false

[tool.setuptools.package-data]
surfify = [
    "tests/*.py",
    "resources/*.npz",
]

[tool.ruff.lint]
extend-select = [
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "ISC",  # flake8-implicit-str-concat
    "PIE",  # flake8-pie
    "PYI",  # flake8-pyi
    "SIM",  # flake8-simplify
    "FLY",  # flynt
    "I",    # isort
    "N",    # pep8-naming
    "PERF", # Perflint
    "PGH",  # pygrep-hooks
    "UP",   # pyupgrade
    "FURB", # refurb
    "RUF",
]
ignore = [
    "I001",
    "C402",
    "C419",
    "UP009",
    "UP015",
    "UP030",
    "UP032",
    "B023",
    "B028",
    "B904",
    "N806",
    "N812",
    "PYI024",
    "RUF005",
    "RUF012",
    "FURB187",
]

[tool.ruff]
extend-exclude = [
    "tests",
]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]

[tool.build_sphinx]
source-dir = "doc"
build-dir = "doc/build"
all_files = "1"
